--- a/README
+++ b/README
@@ -1,5 +1,4 @@
-This is a README for the project.
+For help with GitHub commands (snapshotting, branching, updating, etc).
+please refer to the Git reference page below:
 
-And I edited it.
-
-As did I!
+http://gitref.org/
