deleted:    Ha Ha Ha.txt 	modified:   README

--- a/README
+++ b/README
@@ -2,3 +2,5 @@ For help with GitHub commands (snapshotting, branching, updating, etc).
 please refer to the Git reference page below:
 
 http://gitref.org/
+
+Removed Ha Ha Ha.txt
